[tool.poetry]
name = "ci"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
meson = "^1.3.0"
ninja = "^1.11.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
